Programm etwas beschleunigt